<resources>
    <string name="app_name">Dialog</string>
    <string name="btnAlert">Alert</string>
    <string name="btnDate">Date</string>
    <string name="btnTime">Time</string>
    <string name="btnProgress">Progress</string>
    <string name="btnCustom">Custom</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg">Message</string>
    <string name="title">Title</string>
    <string name="btnYes">Yes</string>
</resources>
