<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dialog.MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAlert"/>
    
    <Button
        android:id="@+id/btnDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDate"/>
    
    <Button
        android:id="@+id/btnTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTime"/>
    
    <Button
        android:id="@+id/btnProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnProgress"/>

    <Button
        android:id="@+id/btnCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCustom"/>


</LinearLayout>
